2009-03-01  Jiri Olsa <olsajiri@gmail.com>
	* Akos Pasztory <akos.pasztory@gmail.com>
	* added checks for asciidoc and xmlto
	* added check for liberty-pic
	* updated .gitignore
	* shlib doesn't need to be executable
	* added Debian packaging
	* relaxed binutils-dev dependency
	* generate conffiles automatically
	* debian pkg docbook-xsl and docbook-xml

2010-02-28  Jiri Olsa <olsajiri@gmail.com>
	* controled config bug fix
	* liberty controled by autoconf now

2010-02-13  Jiri Olsa <olsajiri@gmail.com>
	* controled config feature
	* disable auditing feature

2010-02-12  Jiri Olsa <olsajiri@gmail.com>
	* refactoring shared config

2009-10-20  Jiri Olsa <olsajiri@gmail.com>
	* added clone function

2009-09-16  Jiri Olsa <olsajiri@gmail.com>
	* added support for pipe mode timestamp display
	* added snapshot/release targets

2009-09-15  Jiri Olsa <olsajiri@gmail.com>
	* added initial support for timestamp display

-------------------------------------------------------------------------------
latrace 0.5.7

2009-09-08  Jiri Olsa <olsajiri@gmail.com>
	* 0.5.7 latrace.spec changes

2009-09-04  Jiri Olsa <olsajiri@gmail.com>
	* 0.5.7 release changes

2009-08-21  Jiri Olsa <olsajiri@gmail.com>
	* added '-B' option to always display the { } around the symbol body
	* minor code sttyle changes

2009-08-20  Jiri Olsa <olsajiri@gmail.com>
	* added C++ demangling support - "-d" option

-------------------------------------------------------------------------------
latrace 0.5.6

2009-07-06  Jiri Olsa <olsajiri@gmail.com>
	* changes for the rpm review
	* 0.5.6 release changes

2009-07-04  Jiri Olsa <olsajiri@gmail.com>
	* minor changes for the rpm review

2009-07-02  Jiri Olsa <olsajiri@gmail.com>
	* adding --unsafe for asciidoc to workaround
	  build on the Fedora Rawhide

2009-07-01  Jiri Olsa <olsajiri@gmail.com>
	* adding %postun %post to latrace.spec & several minor 
	  changes based on the Fedora rpm review

2009-06-13  Jiri Olsa <olsajiri@gmail.com>